--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,14 @@
         "unordered_map": "cpp",
         "__hash_table": "cpp",
         "unordered_set": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "__split_buffer": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "queue": "cpp",
+        "string_view": "cpp",
+        "utility": "cpp"
     }
 }
