--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,12 @@
         "initializer_list": "cpp",
         "queue": "cpp",
         "string_view": "cpp",
-        "utility": "cpp"
-    }
+        "utility": "cpp",
+        "ios": "cpp",
+        "algorithm": "cpp",
+        "chrono": "cpp",
+        "limits": "cpp",
+        "ratio": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
